Fixed images not showing

--- a/src/App.css
+++ b/src/App.css
@@ -17,28 +17,28 @@
 }
 
 .services {
-  /* background-image: url('../src/images/img-2.jpg'); */
+  background-image: url('./images/img-2.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  color: #242424;
+  color: #fff;
   font-size: 100px;
 }
 
 .products {
-  /* background-image: url('./images/img-1.jpg'); */
+  background-image: url('./images/img-1.jpg');
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
-  color: #242424;
+  color: #fff;
   font-size: 100px;
 }
 
 .sign-up {
-  /* background-image: url('../src/images/img-8.jpg'); */
+  background-image: url('./images/img-8.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  color: #242424;
+  color: #fff;
   font-size: 100px;
 }
